--- a/res/config.dev.yaml
+++ b/res/config.dev.yaml
@@ -1,7 +1,7 @@
-app_name: 'pyspark_data_preprocess_test'
+app_name: 'pyspark_data_preprocess_prod'
 
 epochs: 1
-verboses: 1
+verboses: 0
 batch_size: 512
 lr: 0.0005
 num_inputs: 100
@@ -13,6 +13,9 @@ score_threshold: 0.6
 track_cnt_threshold: 30
 
 system_logging: 40
+
+candidates_path: '/data01/candidates.gz'
+candidates_file: 'candidates.gz'
 
 w2v_dic_path: 'data_w2v/w2v.dic.npy'
 w2v_mat_path: 'data_w2v/w2v.mat.npy'
